Moving from Yarn mappings to Mojang offical mappings (#48)
* Mojang mappings

* Fixups

* Fixup dump of blocksbytag

* Factor out registry helpers into its own class

* Fixup water ripple render

* Fixup bow pull and dimension variables

* Fix broken sound engine

* Add back decay time for reverb

* Cleanup attributions of sounds

* Fix issues with semantic version parsing

* Misc fixes

* Type specific tag checks in TagLibrary

* Filter out ignored blocks on tag checks

* Replace XorShiftRandom content to use modern random generator available in Java

* More randomizer madness

* Rename isDone to remove to match MC

* Some renames and minor refactors

* Abstract randomizers a bit more; created wrapper for the Minecraft randomizer for testing

* Fixed issue of shared random being used by sound processing threads

* Add block update info to debug screen; minor tweaks

* Change how version chat notification is constructed

* Rework version text notification; scrub loader specific info from lang file

* Add subtitle to the sound config entry tooltip

* More language/tooltip fixups

* Removed unused code from config system

* Cleanup configuration text

* Bend cloth to my will!

* More style madness

* Fix bonehead in tag handling; modify steam effect

* Add release notes link in version update message

* Give fireflies a bit of glow; more variation in steam plumes

* Alert colors of config menu; remove special coding in language file

* Improve block update processing; give a bit of varition to steam effects

* Add keybind for activating mod menu

* Make keybind assignment based on presence of ModMenu

* Fix comodification issue related to tags

* Return DEFAULT info rather than optional

* Bump

---------

Co-authored-by: OreCruncher <orecruncher@gmail.com>